--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>com.github.spsl.mini-rpc</groupId>
+                <artifactId>mini-rpc-core</artifactId>
+                <version>${project.version}</version>
+            </dependency>
 
             <dependency>
                 <groupId>com.alipay.sofa</groupId>
